# fun-tools

./: .gitignore  pyproject.toml
ex_wall_fun_tools/: turn_off.py
ex_wall_fun_tools/screen_mirror/: capture_screen.py  screen_mirror.py
ex_wall_fun_tools/video_player/: video_player.py
